openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-management
  labels:
    app: student-management
spec:
  selector:
    app: student-management
  ports:
    - name: http
      port: 8080
      targetPort: 8080
