openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: student-management
  labels:
    app: student-management
spec:
  to:
    kind: Service
    name: student-management
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
